[seguranca] habilitando autenticacao por token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.password=mysql123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+jwt.secret = hifdshfkjshfwi
+jwt.expiration = 86400000
+security.username-query = select u from Usuario u where u.email = :username
